<resources>
    <string name="app_name">TechnicalTest</string>
    <string name="copy_user">User</string>
    <string name="copy_password">Password</string>
    <string name="copy_login">Login</string>
    <string name="copy_unexpected_network_error">Unexpected network error</string>
    <string name="copy_no_internet_connection">No internet connection</string>
    <string name="copy_timeout_error">Timeout error</string>
    <string name="copy_unknown_error_json">Unknown error (JSON)</string>
    <string name="copy_required_field">Required field</string>
    <string name="copy_incorrect_username_or_password">Incorrect username or password</string>
    <string name="copy_read_information">Read information</string>
    <string name="hint_manual_input">etiqueta1d-latitud-longitud-observacion</string>
    <string name="copy_no_data_available">No data available</string>
    <string name="copy_input_processed_successfully">Input processed successfully</string>
    <string name="copy_logged_out_successfully">Logged out successfully</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copy_require_location_permission">Se requiere permiso de ubicación</string>
    <string name="copy_actual_location">Ubicación actual</string>
    <string name="copy_destination">Destino</string>
    <string name="copy_actual_location_disabled">La ubicación está desactivada</string>
    <string name="copy_need_location_permission">Se necesita permiso de ubicación</string>
    <string name="error_activate_gps">Error al activar GPS</string>
    <string name="copy_location_unavailable">Ubicación no disponible</string>
</resources>